<resources>
    <string name="app_name">E收款</string>
    <string name="account">账号</string>
    <string name="account_hint">请输入用户名或手机号码</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="title_login">登录</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="login_notice">请使用E收款服务账号密码登录。</string>
    <string name="user_center">收银员个人中心</string>
    <string name="merchandiser">跟单员</string>
    <string name="collected">已收款(元)</string>
    <string name="need_collect">未收款(元)</string>
    <string name="main_cashier">收银台</string>
    <string name="main_receivables">待收款订单</string>
    <string name="main_records">收银台流水</string>
    <string name="main_orders">已收款订单</string>
    <string name="name">姓名</string>
    <string name="account_name">账户名</string>
    <string name="belong">所属门店</string>
    <string name="back_home">返回首页</string>
    <string name="logout">退出登录</string>
    <string name="set_amount">设置金额</string>
    <string name="setting">账号管理</string>
    <string name="cash_receipt">现货现款</string>
    <string name="prepayments">预付款</string>
    <string name="online">线上支付</string>
    <string name="pos">POS支付</string>
    <string name="total">合计支付：</string>
    <string name="yuan">¥</string>
    <string name="yuan_">%1$s 元</string>
    <string name="payer">指定付款人</string>
    <string name="input_amount">请输入收款金额</string>
    <string name="remarks">收款备注</string>
    <string name="less_than_20_word">(20字内)</string>
    <string name="reason">如收款信息变动等原因</string>
    <string name="operate_warming">请确认以上信息，确保无误后再进行操作。</string>
    <string name="choose_pay_way">选择支付方式</string>
    <string name="charge">收款</string>
    <string name="choose_payer">选择付款人</string>
    <string name="input_merchant_name">请输入商家名或凭证号</string>
    <string name="input_payer_name">请输入付款人名</string>
    <string name="order_time_">支付时间：%1$s </string>
    <string name="voucher">销售凭证：%1$s </string>
    <string name="order_amount">￥%1$s </string>
    <string name="amount">收款金额</string>
    <string name="payer_name">付款人名</string>
    <string name="state">当前状态</string>
    <string name="order_no">订单号</string>
    <string name="company_no">工厂号</string>
    <string name="confirm_order">确认订单</string>
    <string name="confirm_transaction">确认交易</string>
    <string name="order_detail">订单详情</string>
    <string name="show_code">展示收款码</string>
    <string name="cash">现金支付</string>
    <string name="refresh">点击刷新</string>
    <string name="qrcode">二维码</string>
    <string name="scan_to_pay">扫一扫，向我付款</string>
    <string name="cashier_confirm">请收银员清点预付款，并点击确认!</string>
    <string name="order_type">订单类型</string>
    <string name="payment_type">支付方式</string>
    <string name="order_time">收款时间</string>
    <string name="shop_name">门店名称</string>
    <string name="no_order">暂无订单</string>
</resources>
