<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_black"/>
        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/account_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_black"/>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/password_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin">
        <ImageView
            android:id="@+id/verification_image"
            android:focusable="true"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:background="@drawable/verification"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        <EditText
            android:id="@+id/verification_code"
            android:maxLines="1"
            android:paddingLeft="@dimen/base_margin"
            android:paddingRight="@dimen/base_margin"
            android:hint="@string/verification_hint"
            android:layout_toLeftOf="@id/verification_image"
            android:layout_toStartOf="@id/verification_image"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:drawableLeft="@drawable/notice"
        android:drawableStart="@drawable/notice"
        android:drawablePadding="@dimen/base_margin"
        android:text="@string/login_notice"/>
    <Button
        android:id="@+id/login"
        android:layout_margin="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/button"
        android:text="@string/title_login"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"/>
</LinearLayout>