<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_code"
        android:layout_margin="@dimen/base_margin"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_height"
            android:textSize="30sp"
            android:textColor="@color/text_color_black"
            android:text="$100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"
            android:text="@string/cashier_confirm"
            android:drawableLeft="@drawable/notice"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_margin="@dimen/base_margin"
            android:background="@drawable/button"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"
            android:text="@string/confirm_transaction"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_height"
            android:gravity="center"
            android:text="@string/cash"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_black"
            android:drawableLeft="@drawable/cash"
            android:drawablePadding="@dimen/base_margin"/>
    </LinearLayout>
</LinearLayout>