<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/edit_text_height"-->
        <!--android:orientation="horizontal"-->
        <!--android:background="@color/gray_background">-->
        <!--<FrameLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="match_parent">-->
            <!--<RadioButton-->
                <!--android:id="@+id/cash_receipt"-->
                <!--android:checked="true"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:layout_gravity="center"-->
                <!--android:button="@drawable/radio_button"-->
                <!--android:padding="@dimen/base_margin"-->
                <!--android:text="@string/cash_receipt"-->
                <!--android:textSize="@dimen/text_size_large"-->
                <!--android:textColor="@color/text_color_black"/>-->
        <!--</FrameLayout>-->
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:background="@color/divide_line"-->
            <!--android:layout_gravity="center"/>-->
        <!--<FrameLayout-->
            <!--android:id="@+id/prepayments"-->
            <!--android:focusable="true"-->
            <!--android:clickable="true"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="match_parent">-->
            <!--<RadioButton-->
                <!--android:checked="false"-->
                <!--android:clickable="false"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:layout_gravity="center"-->
                <!--android:button="@drawable/radio_button"-->
                <!--android:padding="@dimen/base_margin"-->
                <!--android:text="@string/prepayments"-->
                <!--android:textSize="@dimen/text_size_large"-->
                <!--android:textColor="@color/text_gray"/>-->
        <!--</FrameLayout>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/base_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/online"/>
        <EditText
            android:id="@+id/et_online_amount"
            android:maxLength="10"
            android:inputType="number|numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/fillet_edittext"
            android:hint="@string/input_amount"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/yuan"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/gray_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/base_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/cash"/>
        <EditText
            android:id="@+id/et_cash_amount"
            android:maxLength="10"
            android:inputType="number|numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/fillet_edittext"
            android:hint="@string/input_amount"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/yuan"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/gray_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/base_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/pos"/>
        <EditText
            android:id="@+id/et_pos_amount"
            android:maxLength="10"
            android:inputType="number|numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/fillet_edittext"
            android:hint="@string/input_amount"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/yuan"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/gray_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/base_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/total"/>
        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/yuan_"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_margin"
        android:background="@color/gray_background"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:padding="@dimen/base_margin">
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_black"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:id="@+id/ll_choose_payer"
            android:layout_toRightOf="@id/tv"
            android:layout_toEndOf="@id/tv"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/tv_payer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:maxLines="1"
                tools:text="淘淘谷信息技术有限公司"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_black"/>
            <!--<ImageView-->
                <!--android:layout_marginLeft="@dimen/small_margin"-->
                <!--android:layout_marginStart="@dimen/small_margin"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:clickable="true"-->
                <!--android:focusable="true"-->
                <!--android:background="@drawable/forward"/>-->
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/white"
        android:padding="@dimen/base_margin"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less_than_20_word"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/line"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/base_margin"
        android:paddingRight="@dimen/base_margin"
        android:paddingBottom="@dimen/base_margin"
        android:background="@color/white">
        <EditText
            android:id="@+id/et_remarks"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxLength="20"
            android:gravity="start"
            android:background="@drawable/fillet_edittext"
            android:textSize="@dimen/text_size_normal"
            android:hint="@string/reason" />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/operate_warming"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/warming_text"/>
    <Button
        android:id="@+id/charge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/charge"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        android:background="@drawable/button"/>
</LinearLayout>