<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:padding="@dimen/base_margin">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/name"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
        <TextView
            android:layout_toLeftOf="@id/name"
            android:layout_toStartOf="@id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:padding="@dimen/base_margin">
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/account_name"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
        <TextView
            android:layout_toLeftOf="@id/account"
            android:layout_toStartOf="@id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account_name"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:padding="@dimen/base_margin">
        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/belong"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
        <TextView
            android:layout_toLeftOf="@id/shop_name"
            android:layout_toStartOf="@id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/belong"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_less_black"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <Button
        android:id="@+id/back_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:layout_marginTop="@dimen/edit_text_height"
        android:background="@drawable/button"
        android:text="@string/back_home"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="@dimen/base_margin"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_gray"
        android:text="@string/logout"/>
</LinearLayout>
