<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_code"
        android:layout_margin="@dimen/base_margin"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_xlarge"
            android:textColor="@color/text_color_black"
            android:text="$100"/>
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="@dimen/base_margin"
            android:background="@drawable/code_border">
            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_margin"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_less_black"
            android:text="@string/scan_to_pay"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_refresh"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/refresh"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_less_black"
                android:text="@string/qrcode"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="@drawable/wechat"
                android:layout_margin="@dimen/base_margin"/>
            <ImageView
                android:layout_margin="@dimen/base_margin"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="@drawable/alipay"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>